<resources>
    <string name="app_name">Popular Movies</string>

    <!-- fallback for JSON parse -->
    <string name="unknown_fallback">Unknown</string>


    <!-- Title strings -->
    <string name="top_rated_title">Top Rated</string>
    <string name="popular_title">Popular</string>
    <string name="favorites_title">Favorites</string>
    <string name="reviews_title">Reviews</string>

    <!-- sort menus -->
    <string name="top_rated_sort">Sort By Top Rated</string>
    <string name="popular_sort">Sort By Popular</string>
    <string name="show_favorites">Show Your Favorites</string>
    <string name="showing_favorites">Showing Your Favorites</string>
    <string name="top_rated_sorted">Sorted By Top Rated</string>
    <string name="popular_sorted">Sorted By Popular</string>
    <string name="add_to_favorites">Add To Favorites</string>
    <string name="remove_from_favorites">Remove From Favorites</string>


    <!-- Confirmation Toasts -->
    <string name="added_to_favorites">Added To Favorites</string>
    <string name="removed_from_favorites">Removed From Favorites</string>

    <!-- Errors-->
    <string name="loading_error">Error Loading Data</string>
    <string name="no_more_to_load">No More To Load</string>
    <string name="unable_to_load">Unable To Load More Movies</string>
    <string name="network_error">No Network Connection</string>
    <string name="video_error">Error Loading Video</string>
    <string name="already_favorite">This move is already saved to your favorites</string>
    <string name="no_reviews">No Reviews For This Movie</string>


    <!-- saveInstanceState keys -->
    <string name="save_key" translatable="false">MOVIES</string>
    <string name="detail_save_key" translatable="false">MOVIE</string>
    <string name="scroll_pos_key" translatable="false">SCROLL_POS</string>
    <string name="page_number_key" translatable="false">PAGE_NUM</string>
    <string name="sort_by_key" translatable="false">SORT_BY</string>

    

    <!--  key for intent extra  -->
    <string name="movie_to_pass" translatable="false">movie</string>
    <string name="movie_id_to_pass" translatable="false">movieID</string>


    <!-- Movie Detail Labels -->
    <string name="movie_rating">Average Rating:</string>
    <string name="movie_release_date">Released:</string>


    <!-- Content descriptions -->
    <string name="poster_iv_cd">Image of movie poster</string>
    <string name="backdrop_iv_cd">Backdrop image of movie</string>
    <string name="source_logo_iv_cd">Logo for website hosting this video</string>


    <!-- Review Layout -->
    <string name="review_author">Author</string>
    <string name="review_content">Review</string>
    <string name="review_url">URL</string>


    <!-- Trailer Video Source  -->
    <string name="youtube_name">Youtube</string>
    <string name="sort_by_menu_title">Sort By</string>
    <string name="selected_sort_option_cd">Selected Sort Option</string>
    <string name="reviews_text">Reviews</string>
    <string name="detail_intent_error">Error Loading Movie Details</string>


</resources>
