<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:app1="http://schemas.android.com/apk/res-auto">

    <!-- help from  https://stackoverflow.com/questions/11377760/adding-spinner-to-actionbar-not-navigation -->
<!--
    <item android:id="@+id/spinner"
        app:showAsAction="always"
        android:title="a"
        app:actionViewClass="android.widget.Spinner"/>-->

    <item
        android:id="@+id/action_current_title"
        android:orderInCategory="1"
        android:title="@string/popular_title"
        app1:showAsAction="always"/>


    <item
        android:id="@+id/action_sort_popular"
        android:orderInCategory="2"
        android:title="@string/popular_sort"
        app1:showAsAction="never"
        />

    <item
        android:id="@+id/action_sort_top_rated"
        android:orderInCategory="3"
        android:title="@string/top_rated_sort"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_sort_favorites"
        android:orderInCategory="4"
        android:title="@string/show_favorites"
        app1:showAsAction="never"/>


</menu>